[package]
name = "gcode"
version = "0.1.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
license = "MIT License"
edition = "2018"
# documentation = "..."
# homepage = "..."
repository = "https://github.com/ithinuel/gcode-rs"

[features]
default = ["parse-expressions", "parse-parameters", "parse-comments"]
no_std = []
parse-expressions = []
parse-parameters = []
parse-comments = []
optional-value = []
# extended:
# Support for 3d printer flavor
# - no word restriction
# - semi-colon comments
extended = []

[badges]
travis-ci = { repository = "ithinuel/gcode-rs", branch = "no_std" }
codecov = { repository = "ithinuel/gcode-rs", branch = "no_std", service = "github" }
maintenance = { status = "experimental" }

# [dependencies.nom]
# version = "^4"
# default-features = false
# features = []
