[package]
name = "gcode"
version = "0.2.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
description = "An async gcode parser for no_std targets."
license = "MIT License"
edition = "2018"
repository = "https://github.com/ithinuel/gcode-rs"

[features]
default = ["std"]
std = []
parse-comments = []
parse-trailing-comment = []
parse-checksum = []
parse-parameters = []
parse-expressions = []
optional-value = []
string-value = []

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
futures-executor = { version = "0.3.5" }

[dependencies]
either = {version = "^1", default-features = false }
futures = { version = "0.3.5", default-features = false }
pin-project-lite = { version = "0.1.7" }
